style.css
/* SETUP CSS USING TEMPLATE */

/* 1. Use a more-intuitive box-sizing model. */
*,
*::before,
*::after {
    box-sizing: border-box;
}

/* 2. Remove default margin */
* {
    margin: 0;
}

/*
  Typographic tweaks!
  3. Add accessible line-height
  4. Improve text rendering
*/
body {
    background-color: #425037;
    color: #DFBA8F;
    font-family: 'Nunito', sans-serif;
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
    margin: 24px;
    margin-left: 48px;
    margin-right: 48px;
    min-width: 600px;
}

/* 5. Improve media defaults */
img,
picture,
video,
canvas,
svg {
    display: block;
}

/* 6. Remove built-in form typography styles */
input,
button,
textarea,
select {
    font: inherit;
}

/* 7. Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
    overflow-wrap: break-word;
}

/* 8. Create a root stacking context */
#root,
#__next {
    isolation: isolate;
}



/* GENERAL CSS */
h1 {
    font-family: 'Chicle', cursive;
    font-size: 700%;
    font-weight: 400;
    text-align: center;
}

div {
    display: flex;
}

a {
    color: #DFBA8F;
    font-family: 'Nunito', sans-serif;
    font-size: larger;
}

p {
    color: #DFBA8F;
    font-family: 'Nunito', sans-serif;
    font-size: 1.6rem;
    padding-bottom: 8px;
    padding-top: 8px;
}


/* NAVBAR CSS */
.navbar {
    align-items: center;
    padding-top: 16px;
    padding-bottom: 16px;
    border-bottom: 1px solid #DFBA8F;
    display: flex;
    justify-content: space-between;
}

.nav-list {
    list-style-type: none;
    padding: 0;
    margin: 0;
    display: flex;
    transition: transform 0.3s ease-in-out;
}

.nav-list li {
    margin: 0 0 0 15px;
}

.nav-list a {
    text-decoration: none;
    text-align: right;
    display: flex;
    float: right;
    font-size: 1.6rem;
}

.navbar a:hover {
    color: rgb(144, 174, 119);
    transition: color 0.5s ease;
}

.menu-icon {
    cursor: pointer;
    display: none;
}

.bar {
    width: 25px;
    height: 3px;
    background-color: #dfba8f;
    margin: 5px 0;
}

.contact-link {
    padding-right: 0;
}


/* PAGE STYLES */

/* this is a fade animation that makes each page's content fade in once it switches to a new page */
@keyframes fadeIn {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

.page-content {
    opacity: 0;
    transition: opacity 0.5s ease-in-out;
}

body {
    animation: fadeIn 1s ease-in;
}

h {
    font-family: 'Chicle', cursive;
    font-size: 700%;
    position: relative;
}

h2 {
    font-family: 'Chicle', cursive;
    font-weight: 400;
    font-size: 480%;
}

h3 {
    font-family: 'Chicle', cursive;
    font-weight: 400;
    font-size: 360%;
}

.heading {
    text-align: left;
}


/* INDEX PAGE CSS (LANDING PAGE) */

.homepage-hello {
    font-family: 'Nunito', sans-serif;
    font-weight: 400;
    font-size: 360%;
}

.main-heading {
    padding-top: 10px;
}

.hannah-images {
    margin-right: 12px;
    flex: 1;
}

.hannah-pic {
    max-width: 100%;
    height: auto;
}


/* ABOUT ME CSS */

.lower-body-content {
    padding: 10px;
}

.about-me-heading-left {
    flex: auto;
    display: inline;
    margin-right: 70px;
    margin-top: 10px;
    text-align: left;
    flex: 2;
}

.about-me-heading-right {
    flex: auto;
    display: inline;
    margin-left: 70px;
    margin-top: 10px;
    text-align: right;
    flex: 2;
}

.body-content {
    margin-top: 50px;
}

.sound-designer {
    margin-top: 24px;
}

.about-links {
    font-family: 'Nunito', sans-serif;
    color: #ba8c58;
    font-size: 1.6rem;
}

.about-links:hover {
    color: rgb(144, 174, 119);
    transition: color 0.5s ease;
}



/* PORTFOLIO PAGE CSS */

.portfolio {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.portfolio-text {
    margin: 16px;
    font-size: 1.2rem;
    text-align: center;
}

.portfolio-item {
    width: 32%;
    background-color: #f0f0f0;
    margin-top: 16px;
    overflow: hidden;
    position: relative;
    border-radius: 6px;
    margin-bottom: 16px;
}

.portfolio-item img {
    width: 100%;
    height: 100%;
    display: block;
    background-color: #425037;
}

.portfolio-item .overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: #1c2d1ad0;
    color: #fff;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    opacity: 0;
    transition: opacity 0.3s;
}

.portfolio-item .overlay a {
    position: absolute;
    bottom: 10px;
    right: 10px;
}

.portfolio-item:hover .overlay {
    opacity: 1;
}

.portfolio-item a {
    font-size: 1.2rem;
    text-decoration: none;
    color: #fff;
    font-weight: bold;
    padding: 12px;
    padding-top: 4px;
    padding-bottom: 4px;
    background-color: #ba8c58;
    transition: background-color 0.3s;
    border-radius: 40px;
}

.portfolio-item a:hover {
    background-color: #8aab81;
    transition: color 0.5s ease;
}

.category-links {
    margin: 16px;
    margin-left: 24px;
    margin-bottom: 0px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.category-links a {
    text-decoration: none;
    font-size: 1.6rem;
    padding-right: 12px;
    padding-left: 12px;
}

.category-links a:hover {
    background-color: rgba(144, 174, 119, 0.162);
    transition: background-color 0.5s ease;
    border-radius: 40px;

}


/* CONTACT CSS */

.contact-body {
    overflow-x: hidden;
}

.contact-text {
    text-align: center;
    margin: 16px auto;
}

.get-in-touch {
    font-family: 'Nunito', sans-serif;
    font-weight: 400;
    font-size: 360%;
    text-align: center;
}

.centered {
    display: block;
    text-align: center;
    align-items: center;
    margin-top: 30px;
    margin-bottom: 30px;
}

.icons {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 6vh;
    width: 100%;
}

.email-logo,
.linkedin-logo,
.soundcloud-logo,
.spotify-logo {
    font-size: 150%;
}

.fly-container {
    position: relative;
    width: 100vw;
    height: 30vh;
}

.flying-image {
    height: 80px;
    width: auto;
    position: absolute;
    top: 30%;
    /* Initial vertical position */
    left: 0;
    /* Initial horizontal position */
    transform: translate(-50%, -50%);
    /* Center the image */
    animation: flyAnimation 10s linear;
    /* Adjust duration as needed */
}

@keyframes flyAnimation {
    to {
        left: 100vw;
    }
}


/* Media query for smaller screens 
    This just makes the number of 'panels' in the portfolio
    2 items wide when a certain screen width */
@media (max-width: 1300px) {
    .portfolio-item {
        width: 49%;
    }
}

/* MEDIA TAGS FOR MOBILE SCREEN SIZE ADJUSTMENTS */
@media only screen and (max-width: 800px) {
    /* Center all elements vertically and stack them */

    .nav-list {
        display: none;
        flex-direction: column;
        position: absolute;
        top: 90px;
        right: 0;
        width: 100%;
        background-color: #232b1e9e;
        text-align: center;
        z-index: 99999;
        opacity: 1;
        transition: opacity 0.5s ease;
        /* Define the transition property */
    }

    .home-link {
        order: -1;
    }

    .nav-list.show {
        display: flex;
    }

    .nav-list li {
        margin: 10px;
    }

    .menu-icon {
        display: block;
    }

    /* Center the heading */
    h,
    .about-me-heading-left,
    .about-me-heading-right {
        text-align: center;
        margin: 0 auto;
    }

    .homepage-hello {
        text-align: center !important;
        margin: 0 auto !important;
        display: block !important;
    }

    /* Center the image and maintain a constant height and width */
    .hannah-images {
        display: flex;
        flex-direction: column;
        align-items: center;
        margin: 0 auto;
        text-align: center;
    }

    .hannah-pic {
        width: 400px;
        /* Adjust the width to your desired size */
        height: 400px;
        /* Adjust the height to your desired size */
        max-width: 100%;
        max-height: 100%;
        height: auto;
        margin-top: 30px;
        margin-bottom: 30px;
    }

    /* Center the h2 and description text */
    h2,
    .description {
        text-align: center;
        margin: 0 auto;
    }

    .body-content {
        flex-wrap: wrap;
        display: inline-block;
        margin-top: 0px;
    }

    /* Increase text size for portfolio items */
    .portfolio-text {
        font-size: 2rem;
        /* Adjust the font size as needed */
    }

    /* Display one portfolio item per row on mobile */
    .portfolio {
        justify-content: center;
    }

    .portfolio-item {
        width: 100%;
        margin-bottom: 16px;
    }

    .portfolio-item a {
        font-size: 1.6rem;
    }

    .category-links a {
        font-size: 1.6rem;
    }

    .flying-image {
        top: 10%;
    }

}

